# plasma-nextcloud-tasks

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
.github/workflows/: ci.yml
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  Header.qml  TaskDelegate.qml  TaskList.qml  configGeneral.qml  main.qml
plugin/: CMakeLists.txt  CalDavService.cpp  CalDavService.h  ICalParser.cpp  ICalParser.h  TaskModel.cpp  TaskModel.h
